bauer/tests/ui/tuple-too-many-names.fail.stderr
error: More names than elements in tuple
 --> tests/ui/tuple-too-many-names.fail.rs:5:20
  |
5 |     #[builder(tuple(a, b, c))]
  |                    ^^^^^^^^^
